# Image_Similarity

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile.backend  image_utils.py  main.py
frontend/: app.py
scripts/: start_backend.sh  start_both.sh  start_frontend.sh
tests/: test_image_utils.py
